combine SpeedStepper and AccelStepper into one

--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,8 @@
-name=AccelStepper
-version=1.59
-author=Mike McCauley <mikem@airspayce.com>
-maintainer=Patrick Wasp <patrickwasp@gmail.com>
+name=HybridStepper
+version=1.60
+author=KT Chou
+maintainer=KT Chou
 sentence=Allows Arduino boards to control a variety of stepper motors.
-paragraph=Provides an object-oriented interface for 2, 3 or 4 pin stepper motors and motor drivers.
+paragraph=A hybrid version of AccelStepper(http://www.airspayce.com/mikem/arduino/AccelStepper/) and SpeedStepper(http://www.pfod.com.au)
 category=Device Control
-url=http://www.airspayce.com/mikem/arduino/AccelStepper/
 architectures=*
