fix library.properties and sqrt2 function

--- a/library.properties
+++ b/library.properties
@@ -5,4 +5,5 @@ maintainer=KT Chou
 sentence=Allows Arduino boards to control a variety of stepper motors.
 paragraph=A hybrid version of AccelStepper(http://www.airspayce.com/mikem/arduino/AccelStepper/) and SpeedStepper(http://www.pfod.com.au)
 category=Device Control
+url=https://github.com/gary9716/hybridstepper
 architectures=*
